[gd_scene load_steps=19 format=3 uid="uid://c8tchusbfdues"]

[ext_resource type="Texture2D" uid="uid://cthh1rh7bq4hj" path="res://assets/textures/red.png" id="1_i5jk6"]
[ext_resource type="Script" path="res://scripts/enemies/passive_enemy.gd" id="1_w8y0b"]
[ext_resource type="Script" path="res://scripts/other/state_machine.gd" id="3_kq0uh"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_idle.gd" id="4_ub4h8"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_wander.gd" id="5_v7vw2"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_attack.gd" id="6_naqfq"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_takedmg.gd" id="7_pi5ua"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_death.gd" id="8_wceyh"]
[ext_resource type="PackedScene" uid="uid://d3lnabkpjpnrw" path="res://scenes/other/hurtbox_component.tscn" id="10_ecmtm"]
[ext_resource type="PackedScene" uid="uid://d3g8tgfu6ecju" path="res://scenes/other/health_collectable.tscn" id="10_f2ir2"]
[ext_resource type="PackedScene" uid="uid://dwo8g0e354tel" path="res://scenes/gui/health_bar.tscn" id="11_0ja2b"]
[ext_resource type="PackedScene" uid="uid://dw85pq25vevqj" path="res://scenes/other/health_component.tscn" id="11_iq8m5"]
[ext_resource type="PackedScene" uid="uid://dx75c8mg74i2t" path="res://scenes/other/essence_collectable.tscn" id="11_y51lk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3ixml"]

[sub_resource type="BoxMesh" id="BoxMesh_7qjmc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lpxb8"]
albedo_texture = ExtResource("1_i5jk6")

[sub_resource type="BoxMesh" id="BoxMesh_i81ob"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qc4uw"]
size = Vector3(1.21436, 1.22961, 1.50586)

[node name="Enemy" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_w8y0b")
statetimer_min = 0.05
statetimer_max = 1.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3ixml")

[node name="Rig" type="Node3D" parent="."]

[node name="CSGMesh3D" type="CSGMesh3D" parent="Rig"]
mesh = SubResource("BoxMesh_7qjmc")
material = SubResource("StandardMaterial3D_lpxb8")

[node name="FrontIndicatorMesh" type="CSGMesh3D" parent="Rig"]
transform = Transform3D(0.367728, 0, 0, 0, 0.224498, 0, 0, 0, 0.210745, 0, 0.2, -0.538)
mesh = SubResource("BoxMesh_i81ob")

[node name="Hitbox3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000732422, 0.114807, -0.25293)
shape = SubResource("BoxShape3D_qc4uw")

[node name="HealthBar" parent="." instance=ExtResource("11_0ja2b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_kq0uh")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_ub4h8")

[node name="EnemyWander" type="Node" parent="StateMachine"]
script = ExtResource("5_v7vw2")

[node name="EnemyAttack" type="Node" parent="StateMachine"]
script = ExtResource("6_naqfq")
attack_cooldown = 2.0

[node name="EnemyTakeDMG" type="Node" parent="StateMachine"]
script = ExtResource("7_pi5ua")

[node name="EnemyDeath" type="Node" parent="StateMachine"]
script = ExtResource("8_wceyh")
health_collectable_scene = ExtResource("10_f2ir2")
essence_collectable_scene = ExtResource("11_y51lk")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_ecmtm")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("11_iq8m5")]
health = 30
max_health = 30

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5127, 0.00321913)
light_color = Color(0.890196, 0.109804, 0.239216, 1)
light_energy = 2.0
light_indirect_energy = 2.0
omni_range = 5.11108

[connection signal="body_entered" from="Hitbox3D" to="." method="_on_hitbox_3d_body_entered"]
[connection signal="body_exited" from="Hitbox3D" to="." method="_on_hitbox_3d_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_recovery_timer_timeout"]
